# walk-forward-backtester

./: .cursorrules  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/walk_forward_opt/: __main__.py
src/walk_forward_opt/backtesting/: wfo.py
src/walk_forward_opt/strategies/: atr_stop_loss.py  ma_crossover.py
src/walk_forward_opt/utils/: metrics.py  types.py
tests/walk_forward_opt/test_strategies/: test_atr_stop_loss.py  test_ma_crossover.py
tests/walk_forward_opt/test_utils/: test_metrics.py
